# re-path

./: docker-compose.yml
analytic-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_analytics_endpoint.py  test_click_shortcode.py
analytic-service/app/: __init__.py  main.py
analytic-service/app/api/v1/: analytics.py  dashboard.py  health.py
analytic-service/app/core/: __init__.py  config.py  database.py  exceptions.py  opensearch.py  rabbitmq.py  rabbitmq_rpc.py
analytic-service/app/models/: __init__.py  analytics_event.py  click_event.py  url.py
analytic-service/app/schemas/: analytics.py  dashboard.py  health.py  response.py  rpc_contracts.py
analytic-service/app/services/: analytics_service.py  dashboard_service.py  message_handler.py  opensearch_service.py
analytic-service/schemas/: README.md  dashboard_error.example.json  dashboard_response.example.json
analytic-service/scripts/: generate_json_schema.py  test_with_examples.py
analytic-service/tests/: test_rpc_contract.py
docker/rabbitMQ/: Makefile  docker-compose.yml
elasticsearch/: .env.elasticsearch  Makefile  README.md  docker-compose.yml
nginx/: nginx.conf
redirect-service/: .air.toml  .env.example  .gitignore  Makefile  go.mod  go.sum
redirect-service/cmd/: main.go  wire.go  wire_gen.go
redirect-service/docs/: README.md  docs.go  swagger.json  swagger.yaml
url-service/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
(+95 files in other folders)
